<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_3"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/upload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/upload"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="showInsertDataDialog" />


    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/cardview_dark_background"
        app:layout_constraintBottom_toBottomOf="@+id/upload_button"  app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"  />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:text="@string/real_time_data_collection"
        android:textColor="@color/white"
        android:textSize="15pt"
        android:textStyle="bold"
        
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="20dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="146dp"
        tools:ignore="MissingConstraints">
        <!--Search -->
        <EditText
            android:id="@+id/pest_name_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:inputType="text"
            tools:ignore="LabelFor" />

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="-51dp"
            android:text="-->" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingTop="16dp"
                android:layout_marginTop="20sp"
                android:background="@android:color/holo_green_light"
                >
                <ImageView
                    android:id="@+id/pest_image_1"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/aphid"
                    android:contentDescription="@string/todo" />

                <!-- name of the pest/-->
                <TextView
                    android:id="@+id/pest_name1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/aphids"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_margin="40dp"

                    />
                <!--name of the diseases-->
                <TextView
                    android:id="@+id/pest_title_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/disease_name"
                    android:textColor="@color/material_dynamic_neutral10"
                    android:textSize="35sp"
                    android:textStyle="bold"
                    android:layout_margin="40dp"
                    />

                <TextView
                    android:id="@+id/pest_description_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/description_of_the_pest_disease"
                    android:layout_margin="40dp"
                    android:textSize="35sp"
                    android:textColor="@color/material_dynamic_neutral10"
                    />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>